--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
               "src/favicon.ico"
             ],
             "styles": [
+              "src/custom-theme.scss",
               "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
               "src/styles.css"
             ],
