--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "jwt-decode": "^4.0.0",
     "lottie-web": "^5.12.2",
     "ng-zorro-antd": "^18.2.0",
     "ngx-lottie": "^12.0.0",
