--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "chart.js": "^4.4.6",
     "jwt-decode": "^4.0.0",
     "lottie-web": "^5.12.2",
     "ng-zorro-antd": "^18.2.0",
+    "ng2-charts": "^6.0.1",
     "ngx-lottie": "^12.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
